load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sol",
    srcs = [
        "client.go",
        "extserver.go",
        "slot.go",
        "types.go",
    ],
    importpath = "sentioxyz/sentio-core/chain/sol",
    visibility = ["//visibility:public"],
    deps = [
        "//chain/chain",
        "//chain/clientpool",
        "//common/https",
        "//common/range",
        "//common/utils",
        "@com_github_gagliardetto_solana_go//:solana-go",
        "@com_github_gagliardetto_solana_go//rpc",
        "@com_github_gagliardetto_solana_go//rpc/jsonrpc",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "sol_test",
    srcs = [
        "latest_header_test.go",
        "sol_test.go",
    ],
    embed = [":sol"],
    deps = [
        "@com_github_gagliardetto_solana_go//:solana-go",
        "@com_github_gagliardetto_solana_go//rpc",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
