load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sui",
    srcs = [
        "grpc_client_pool.go",
        "query.go",
        "rpc_types.go",
        "rpc_types_v2.go",
        "slot.go",
        "slot_grpc.go",
    ],
    importpath = "sentioxyz/sentio-core/chain/sui",
    visibility = ["//visibility:public"],
    deps = [
        "//chain/chain",
        "//chain/clientpool",
        "//chain/clientpool/ex",
        "//chain/move",
        "//chain/sui/types",
        "//common/log",
        "//common/set",
        "//common/utils",
        "@com_github_ethereum_go_ethereum//common/hexutil",
        "@com_github_pkg_errors//:errors",
        "@com_github_sentioxyz_sui_apis//sui/rpc/v2:rpc",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
    ],
)

go_test(
    name = "sui_test",
    srcs = [
        "query_test.go",
        "rpc_types_v2_test.go",
    ],
    embed = [":sui"],
    deps = [
        "//chain/move",
        "//chain/sui/types",
        "//common/log",
        "//common/set",
        "//common/utils",
        "@com_github_goccy_go_json//:go-json",
        "@com_github_pkg_errors//:errors",
        "@com_github_stretchr_testify//assert",
    ],
)
