load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "cacheable.go",
    ],
    importpath = "sentioxyz/sentio-core/common/cache",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cache_test",
    srcs = ["cache_test.go"],
    embed = [":cache"],
    deps = ["//common/log"],
)
