load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "chains",
    srcs = [
        "chain_id.go",
        "chain_info.go",
        "chains.go",
        "types.go",
    ],
    importpath = "sentioxyz/sentio-core/common/chains",
    visibility = ["//visibility:public"],
    deps = ["@com_github_ethereum_go_ethereum//common"],
)

go_test(
    name = "chains_test",
    srcs = ["chains_test.go"],
    embed = [":chains"],
    deps = [
        "@com_github_stretchr_testify//assert",
    ],
)
