load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clickhousemanager",
    srcs = [
        "conn.go",
        "conn_impl.go",
        "conn_options.go",
        "constants.go",
        "error_code_map.go",
        "manager.go",
        "roles.go",
        "sharding.go",
        "sharding_impl.go",
    ],
    importpath = "sentioxyz/sentio-core/common/clickhousemanager",
    visibility = ["//visibility:public"],
    deps = [
        "//common/anyutil",
        "//common/clickhousemanager/helper",
        "//common/log",
        "//common/utils",
        "//service/common/models",
        "//service/common/protos",
        "@com_github_clickhouse_clickhouse_go_v2//:clickhouse-go",
        "@com_github_clickhouse_clickhouse_go_v2//lib/driver",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_mitchellh_hashstructure_v2//:hashstructure",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

filegroup(
    name = "test_config",
    srcs = glob(["testdata/test_config.yaml"]),
    visibility = ["//visibility:public"],
)

go_test(
    name = "clickhousemanager_test",
    srcs = ["manager_test.go"],
    data = [
        "//common/clickhousemanager:test_config",
    ],
    embed = [":clickhousemanager"],
    deps = ["@com_github_stretchr_testify//suite"],
)
