load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "format",
    srcs = ["string_format.go"],
    importpath = "sentioxyz/sentio-core/common/format",
    visibility = ["//visibility:public"],
)

go_test(
    name = "format_test",
    srcs = ["string_format_test.go"],
    embed = [":format"],
    deps = ["@com_github_stretchr_testify//assert"],
)
