load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "formula",
    srcs = [
        "evaluator.go",
        "matrix_index_tree.go",
        "parser.go",
    ],
    importpath = "sentioxyz/sentio-core/common/formula",
    visibility = ["//visibility:public"],
    deps = [
        "//common/log",
        "//service/common/protos",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "formula_test",
    srcs = [
        "evaluator_test.go",
        "matrix_index_tree_test.go",
        "parser_test.go",
    ],
    embed = [":formula"],
    deps = [
        "//service/common/protos",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
